# neurojig_dev

./: .pre-commit-config.yaml  README.md  pyproject.toml
NeuroJig/app/: __main__.py
NeuroJig/core/model/: models.py
NeuroJig/data/: io_json.py
NeuroJig/data/store/: project_service.py
NeuroJig/services/: validation.py
NeuroJig/ui/: canvas.py  main_window.py
NeuroJig/ui/panels/: assets_panel.py  circuits_panel.py  project_panel.py  properties_panel.py
tests/: test_models.py  test_project_service.py  test_ui_smoke.py  test_validation.py
