[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NeuroJig"
version = "0.1.0"
description = "Modular framework for automotive wire-harness jig layouts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
